# immutables

./: .editorconfig  .gitignore  .travis.yml  LICENSE  LICENSE-MIT  MANIFEST.in  Makefile  NOTICE  README.rst  mypy.ini  pyproject.toml  setup.py
.ci/: appveyor.yml  build-manylinux-wheels.sh  package-version.py  requirements-win.txt  travis-before-install.sh  travis-build-wheels.sh  travis-release.sh  travis-tests.sh
.github/workflows/: release-trigger.yml  release.yml  tests.yml
immutables/: __init__.py  _map.c  _map.h  _map.pyi  _protocols.py  _testutils.py  _version.py  lbst.py  list.py  map.py  map_with_array_nodes.py  pythoncapi_compat.h
performance_suites/: benchmark.py  pypy73.txt  python37.txt  python38.txt  requirements.txt
tests/: __init__.py  _test_list.py  conftest.py  test_issue24.py  test_lbst.py  test_map.py  test_map_py_array.py  test_map_py_array_stress.py  test_mypy.py  test_none_keys.py  test_pattern_matching.py
tests/test-data/: check-immu.test
